# sphinx-terraform

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml  requirements.in  setup.py
docs/: about.rst  changelog.rst  conf.py  contributing.rst  glossary.rst  index.rst  usage.rst
docs/_ext/: extlinks.py  sphinxcompat.py
docs/_static/: style.css
docs/apidoc/: index.rst
docs/demo/: index.rst
docs/demo/terraform/: main.tf  outputs.tf  variables.tf
docs/demo/terraform/sub/: output.tf  variables.tf
src/sphinx_terraform/: __init__.py  code.py  i18n.py  markup.py  sphinxapi.py  terraform.py
src/sphinx_terraform/viewcode/: __init__.py  html.py
test/integrated/: conftest.py  test_tf.py
test/integrated/samples/test-basic/: index.rst
test/integrated/samples/test-config-terraform_comment_markup-md/: conf.py  index.rst  main.tf
test/integrated/samples/test-config-terraform_comment_markup-rst/: conf.py  index.md
test/integrated/samples/test-md-comment-from-md-document/: index.md
test/integrated/samples/test-md-directive-in-rst-document/: index.rst
test/integrated/samples/test-rst-comment-from-rst-document/: conf.py  index.rst
test/integrated/samples/test-rst-directive-in-md-document/: index.md
test/unit/terraform/: test_resourcesignature.py
